# stem-agent

./: .env.example  .gitignore  README.md  pyproject.toml  write-up.md  write-up.tex
configs/: base_agent.yaml  baseline_no_web.yaml  evolved_deep_research_agent.yaml  evolved_deep_research_agent_v1.yaml  evolved_deep_research_agent_v2.yaml  evolved_deep_research_agent_v3.yaml  evolved_deep_research_agent_v4.yaml  evolved_deep_research_agent_v5.yaml  genome_schema.yaml
docs/: design_decisions.md  evaluation_plan.md  experiment_log.md  references.bib  research_log.md  state_of_the_art.md
evals/: questions.json  rubric.yaml
results/: comparison.md
results/evaluations/: 20260505-evolved-dr001-smoke-judge.json  20260505-evolved-v3-dr001-smoke-judge.json
results/evolution_proposals/evolved_v5_full_live/: candidate_genome.yaml  proposal.md
results/traces/: 20260502T230439Z-baseline-live.json  20260504T065646Z-baseline-dry-run.json  20260504T065718Z-baseline-live.json  20260504T090715Z-baseline-dry-run.json  20260504T090740Z-baseline-live.json  20260505T070439Z-evolved-live.json  20260505T073135Z-evolved-live.json  20260505T074337Z-evolved-live.json
src/stem_agent/: __init__.py  __main__.py  cli.py
src/stem_agent/core/: __init__.py  config.py  genome.py  openai_responses.py  paths.py  settings.py  tracing.py
src/stem_agent/evaluation/: __init__.py  batch.py  judge.py  scoring.py
src/stem_agent/evolution/: __init__.py  propose.py
src/stem_agent/tools/: __init__.py
src/stem_agent/workflows/: __init__.py  baseline.py  evolved.py
(+242 files in other folders)
